# zealensui_test

./: build.gradle  gradle.properties  local.properties  zealens.jks
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/: acra_debug.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/config/: acA1920-gm.pfs  cam_color_config.xml  cam_config.xml  config.cfg  event_id.txt  seqlist.txt  stereo_params_x_left.xml  stereo_params_x_right.xml  video_upload_config.xml
app/src/main/assets/tmp/: A001.txt  A002.txt  A003.txt  A004.txt  A005.txt  A006.txt  A007.txt  A008.txt  A009.txt  A010.txt  A011.txt  A012.txt  A013.txt  A014.txt  A015.txt  A016.txt  B001.txt  B002.txt  B003.txt  B004.txt  B005.txt  B006.txt  B007.txt  B008.txt  B009.txt  B010.txt  B011.txt  B012.txt  B013.txt  B014.txt  B015.txt  B016.txt  C001.txt  C002.txt  C003.txt  C004.txt  C005.txt  C006.txt  C007.txt  C008.txt  (+153 more)
app/src/main/res/drawable/: background_selector_transparent_blue.xml  btn_text_color_white_blue_selector.xml  button_effect_add_player.xml  button_effect_blue_4_analyze.xml  button_effect_blue_4_video_replay.xml  button_effect_blue_samll.xml  button_effect_blue_white_with_shadow.xml  button_effect_blue_with_shadow.xml  button_effect_break_mode_bg_selector.xml  button_effect_close_style_blue_white.xml  button_effect_edge_white_left_corner.xml  button_effect_edge_white_right_corner.xml  button_effect_exchange_player.xml  button_effect_exchange_playground.xml  button_effect_gray.xml  button_effect_green.xml  button_effect_green_small.xml  button_effect_green_with_shadow.xml  (+29 more)
(+229 files in other folders)
